--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ accelerate
 beautifulsoup4
 bitsandbytes
 blingfire
-datasets
+datasets==2.19.0
 faiss-gpu
 hf-transfer
 huggingface-hub
@@ -13,7 +13,7 @@ llama-index-llms-huggingface
 llama-index-vector-stores-faiss
 loguru
 openai==1.13.3
-ragas
+ragas==0.1.7
 sentence_transformers
 torch
 transformers
