Update results with correctness_answer

--- a/veval/tasks/pubmedqa/pubmedqa.yaml
+++ b/veval/tasks/pubmedqa/pubmedqa.yaml
@@ -24,3 +24,8 @@ metric_list:
     args:
       - query
       - context
+  - metric: correctness_answer
+    args:
+      - query
+      - answer
+      - gt_answer
