Add function to get embedding models

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ hf-transfer
 huggingface-hub
 langchain
 llama-index
+llama-index-embeddings-cohere
 llama-index-embeddings-huggingface
 llama-index-llms-huggingface
 llama-index-vector-stores-faiss
